1. Added steps fragment 2. added different layout for recipe home fragment for landscape mode 3. added saveinstancestate for homeactivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="recipe_title">Recipe Title</string>
     <string name="x_ingredients">%1d Ingredients</string>
     <string name="step_x">Step %1d</string>
+    <string name="recipe_introduction">Recipe Introduction</string>
 </resources>
